--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <header></header>
     <section>
       <div id="seats"></div>
+      <div id="rows"></div>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js" charset="utf-8"></script>
